hn_tests/opt/failing/euler5.hn
hnMain = {
	f xx rr = {
		not_divisable x = {
			natfind pred n = {
				ff nn found = _if found found (pred nn)
				natrec ff (eq 0 1) n
			}
			g divisor = _if (eq 0 (mod x (incr divisor))) (eq 0 1) (eq 0 0)
			natfind g 20
		}
		xxx = mul 60 (mul 19 (incr xx))
		_if (eq rr 0) (_if (not_divisable xxx) rr xxx) rr
	}
	print (natrec f 0 1000000)
}